Fixed dropdown shifting

--- a/src/style/subTopbar.css
+++ b/src/style/subTopbar.css
@@ -39,3 +39,10 @@
     border-right: none !important;
     border-bottom: 2px solid #E14561;
 }
+
+
+/* prevent dropdown from shifting up when menu open */
+.navbar-nav .dropdown-menu {
+    position: absolute !important;
+  }
+  
